Fix for z-index issue on language menu mobile view (was hidden by galleria tagline)

--- a/src/main/webapp/themes/default/css/eu-menu.css
+++ b/src/main/webapp/themes/default/css/eu-menu.css
@@ -24,7 +24,7 @@
 	position:				relative; 
 	text-align:				left;
 	top:					0.03em;
-	z-index:				3;	
+	z-index:				11;	
 }
 
 .eu-menu a {
